# crypto_bot

./: .dockerignore  .env.example  .gitignore  .pre-commit-config.yaml  Dockerfile  Makefile  README.md  bot-problems-analysis.md  debug_calc_backup.py  debug_live_calc_backup.py  docker-compose.yml  main.py  pyproject.toml  requirements.txt  solution-callback-fix-v2.md  solution-callback-fix.md  test_calc_fix_backup.py  test_debug_handler_backup.py  test_keyboard.py
.cursor/rules/: clean-code.mdc  python.mdc
.github/workflows/: ci.yml  release.yml  security.yml
docker/: prometheus.yml  redis.conf
docker/grafana/datasources/: prometheus.yml
docs/: API_client.task004.md  calc_task002.md  handler_rate_task001.md  inline_keyboards_task003.md  integration_task012.md  logic_exchange_task006.md  service_cache005.md  set_manager_task010.md  stats_task011.md  task_009_set_markup.md
memory-bank/: TASK-011-COMPLETION-REPORT.md  TASK-012-COMPLETION-REPORT.md  activeContext.md  creative-decisions.md  progress.md  projectbrief.md  tasks.md
src/: __init__.py  app.py
src/bot/: __init__.py
src/bot/handlers/: __init__.py  admin_handlers.py  basic_handlers.py  calc_handler.py  rate_handler.py
src/bot/keyboards/: README.md  __init__.py  currency_keyboard.py
src/bot/states/: __init__.py  calc_states.py
src/config/: models.py  settings.py  validators.py
src/models/: exchange.py  rapira_models.py
src/services/: base.py  cache_service.py  calculation_service.py  notification_service.py  rapira_client.py  stats_service.py
src/templates/: notification_templates.py
src/utils/: __init__.py  error_handler.py  logger.py
tests/: __init__.py
tests/dev-tools-tests/cicd/: __init__.py  test_workflows.py
tests/dev-tools-tests/docker/: __init__.py  test_docker_configuration.py
tests/dev-tools-tests/validation/: __init__.py  test_technology_validation.py
tests/integration/: test_full_flow.py
tests/manual/: demo_keyboards.py
tests/unit/: test_development_environment.py  test_project_structure.py
tests/unit/bot/: __init__.py
tests/unit/bot/handlers/: __init__.py  test_admin_handlers.py  test_calc_handler.py  test_rate_handler.py  test_set_manager_handlers.py
tests/unit/bot/keyboards/: test_currency_keyboard.py
tests/unit/bot/states/: __init__.py  test_calc_states.py
tests/unit/cicd/: test_workflows.py
tests/unit/config/: __init__.py  test_models.py  test_settings.py  test_validators.py
tests/unit/docker/: test_docker_configuration.py
tests/unit/models/: test_rapira_models.py
tests/unit/services/: test_cache_service.py  test_calculation_service.py  test_notification_service.py  test_rapira_client.py  test_stats_service.py
tests/unit/templates/: test_notification_templates.py
tests/unit/utils/: test_error_handler.py
tests/unit/validation/: test_technology_validation.py
