[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "crypto-bot"
version = "1.0.0"
description = "Telegram bot for real-time currency exchange rates"
authors = [
    {name = "Crypto Bot Team", email = "team@cryptobot.dev"},
]
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "aiogram>=3.13.0",
    "httpx>=0.24.0",
    "pydantic>=2.8.0,<3.0.0",
    "pydantic-settings>=2.0.0",
    "python-dotenv>=1.0.0",
    "redis>=4.5.0",
    "structlog>=23.0.0",
]

[project.optional-dependencies]
# Minimal test dependencies only
test = [
    "pytest>=7.4.0",
    "pytest-asyncio>=0.21.0",
    "pytest-mock>=3.11.0",
]

# Optional dev dependencies (can be added later)
dev = [
    "pytest>=7.4.0",
    "pytest-asyncio>=0.21.0",
    "pytest-mock>=3.11.0",
    "black>=23.7.0",  # Only for manual formatting
]

[project.urls]
Repository = "https://github.com/crypto-bot-team/crypto-bot.git"

[project.scripts]
crypto-bot = "src.main:main"

# Minimal pytest configuration
[tool.pytest.ini_options]
minversion = "7.0"
addopts = [
    "--strict-markers",
    "-v",
]
testpaths = ["tests"]
python_files = ["test_*.py", "*_test.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
markers = [
    "slow: marks tests as slow",
    "integration: marks tests as integration tests",
    "unit: marks tests as unit tests",
]
asyncio_mode = "auto"
